# routes/routes.go
@@ -12,4 +12,5 @@ func Setup(app *fiber.App) {
 
 	// Bayi
 	app.Post("/api/newborn-data", controllers.CreateNewbornData)
+	app.Post("/api/newborn-eeg", controllers.CreateNewbornEEG)
 }
